# pokerEconomics

./: .dockerignore  .gitignore  .gitmodules  Card.py  Deck.py  Dockerfile  Endpoint.py  Game.py  ISSUES.md  Logger.py  Player.py  README.md  Showdown.py  aggression.py  analysis.py  build.sh  config.json  createPlayer.py  docker-compose.yaml  dummy_tester.py  dumy_tester.py  engine.py  gameplay_analysis.py  groper.py  handstrength.py  init.sh  init_instance.sh  irRiver.txt  journal.json  journal_full.json  metric_analyser.py  metric_benchmark.py  outs.py  players.json  remove.sh  requirements.txt  setup.py  test.py  testShowdown.py  test_draft.py  (+3 more)
analysis/: analysis.py  convergence_metrics_analysis.Rmd  game_data_analysis.R  history_analysis.Rmd  plot_data.R  trunc_norm_plot.R
checks/: __init__.py  compare_test.py  test_game.py  test_player.py  test_showdown.py  test_utils.py
components/: Card.py  Deck.py  Inspector.py  Logger.py  Showdown.py  Streamer.py  __init__.py
configs/: benchmark_config.json  config.csv  config.json  firstkey.pem  generator.py  rational_config.csv  s0.1_r0_b0_vs_s0.1_r0.1_b0.json  test_configs.json
configs/1/: s-0.1_r-0.1_b0_vs_s-0.1_r-0.1_b6.json  s-0.1_r-0.1_b3_vs_s-0.1_r-0.1_b6.json  s-0.1_r0.1_b0_vs_s-0.1_r-0.1_b3.json  s-0.1|r-0.1|b0_vs_s-0.1|r-0.1|b3.json  s-0.1|r-0.1|b0_vs_s-0.1|r-0.1|b6.json  s-0.1|r-0.1|b3_vs_s-0.1|r-0.1|b6.json  s-0.1|r0.1|b0_vs_s-0.1|r-0.1|b0.json  s-0.1|r0.1|b0_vs_s-0.1|r-0.1|b3.json  s-0.1|r0.1|b0_vs_s-0.1|r-0.1|b6.json
configs/10/: s0.1_r0.1_b3_vs_s0.1_r-0.1_b3.json  s0.1|r0.1|b3_vs_s0.1|r-0.1|b3.json  s0.1|r0.1|b3_vs_s0.1|r-0.1|b6.json  s0.1|r0.1|b3_vs_s0.1|r0.1|b6.json  s0.1|r0.1|b6_vs_s-0.1|r-0.1|b0.json  s0.1|r0.1|b6_vs_s-0.1|r-0.1|b3.json  s0.1|r0.1|b6_vs_s-0.1|r-0.1|b6.json
configs/11/: s0.1_r0.1_b6_vs_s-0.1_r0.1_b6.json  s0.1_r0.1_b6_vs_s0.1_r-0.1_b0.json  s0.1_r0.1_b6_vs_s0.1_r-0.1_b6.json  s0.1|r0.1|b6_vs_s-0.1|r0.1|b0.json  s0.1|r0.1|b6_vs_s-0.1|r0.1|b3.json  s0.1|r0.1|b6_vs_s-0.1|r0.1|b6.json  s0.1|r0.1|b6_vs_s0.1|r-0.1|b0.json  s0.1|r0.1|b6_vs_s0.1|r-0.1|b3.json  s0.1|r0.1|b6_vs_s0.1|r-0.1|b6.json
configs/2/: s-0.1_r0.1_b0_vs_s-0.1_r0.1_b6.json  s-0.1_r0.1_b3_vs_s-0.1_r-0.1_b0.json  s-0.1_r0.1_b3_vs_s-0.1_r-0.1_b6.json  s-0.1|r0.1|b0_vs_s-0.1|r0.1|b3.json  s-0.1|r0.1|b0_vs_s-0.1|r0.1|b6.json  s-0.1|r0.1|b3_vs_s-0.1|r-0.1|b0.json  s-0.1|r0.1|b3_vs_s-0.1|r-0.1|b3.json  s-0.1|r0.1|b3_vs_s-0.1|r-0.1|b6.json  s-0.1|r0.1|b3_vs_s-0.1|r0.1|b6.json
configs/3/: s-0.1_r0.1_b6_vs_s-0.1_r-0.1_b3.json  s-0.1|r0.1|b6_vs_s-0.1|r-0.1|b0.json  s-0.1|r0.1|b6_vs_s-0.1|r-0.1|b3.json  s-0.1|r0.1|b6_vs_s-0.1|r-0.1|b6.json  s0.1_r-0.1_b0_vs_s-0.1_r-0.1_b3.json  s0.1|r-0.1|b0_vs_s-0.1|r-0.1|b0.json  s0.1|r-0.1|b0_vs_s-0.1|r-0.1|b3.json  s0.1|r-0.1|b0_vs_s-0.1|r-0.1|b6.json
configs/4/: s0.1_r-0.1_b0_vs_s-0.1_r0.1_b0.json  s0.1_r-0.1_b0_vs_s-0.1_r0.1_b6.json  s0.1_r-0.1_b0_vs_s0.1_r-0.1_b6.json  s0.1|r-0.1|b0_vs_s-0.1|r0.1|b0.json  s0.1|r-0.1|b0_vs_s-0.1|r0.1|b3.json  s0.1|r-0.1|b0_vs_s-0.1|r0.1|b6.json  s0.1|r-0.1|b0_vs_s0.1|r-0.1|b3.json  s0.1|r-0.1|b0_vs_s0.1|r-0.1|b6.json  s0.1|r-0.1|b3_vs_s-0.1|r-0.1|b0.json
configs/5/: s0.1_r-0.1_b3_vs_s-0.1_r-0.1_b3.json  s0.1_r-0.1_b3_vs_s-0.1_r0.1_b0.json  s0.1|r-0.1|b3_vs_s-0.1|r-0.1|b3.json  s0.1|r-0.1|b3_vs_s-0.1|r-0.1|b6.json  s0.1|r-0.1|b3_vs_s-0.1|r0.1|b0.json  s0.1|r-0.1|b3_vs_s-0.1|r0.1|b3.json  s0.1|r-0.1|b3_vs_s-0.1|r0.1|b6.json  s0.1|r-0.1|b3_vs_s0.1|r-0.1|b6.json
configs/6/: s0.1_r-0.1_b6_vs_s-0.1_r-0.1_b0.json  s0.1_r-0.1_b6_vs_s-0.1_r-0.1_b6.json  s0.1|r-0.1|b6_vs_s-0.1|r-0.1|b0.json  s0.1|r-0.1|b6_vs_s-0.1|r-0.1|b3.json  s0.1|r-0.1|b6_vs_s-0.1|r-0.1|b6.json  s0.1|r-0.1|b6_vs_s-0.1|r0.1|b0.json  s0.1|r-0.1|b6_vs_s-0.1|r0.1|b3.json  s0.1|r-0.1|b6_vs_s-0.1|r0.1|b6.json
configs/7/: s0.1_r0.1_b0_vs_s-0.1_r-0.1_b6.json  s0.1|r0.1|b0_vs_s-0.1|r-0.1|b0.json  s0.1|r0.1|b0_vs_s-0.1|r-0.1|b3.json  s0.1|r0.1|b0_vs_s-0.1|r-0.1|b6.json  s0.1|r0.1|b0_vs_s-0.1|r0.1|b0.json  s0.1|r0.1|b0_vs_s-0.1|r0.1|b3.json  s0.1|r0.1|b0_vs_s-0.1|r0.1|b6.json
configs/8/: s0.1_r0.1_b0_vs_s0.1_r-0.1_b0.json  (+10 more)
data/: readme.txt
engines/: README.md  Test.py  auto_engine.py  aws.py  benchmark.py  engine.py  multi_engine.py  param_engine.py  test_multi_engine.py  utils.py
evaluator/: CMakeLists.txt  README.md  result.html  wrapper.cpp
hand_evaluator/: __init__.py  evaluate_cards.py  wrapper.hpp
handevaluator/: CMakeLists.txt  bindings.cpp  demo.py  getrank.cc  op  setup.py
poker_metrics/: __init__.py  chen.py  math_utils.py  ogpotential.py  outs.py  ph_score.py  potential.py  py_simplified_hand_potential.py  rank.py  shs.c  shs.py  shs1.py  shs2.py  shs3.py  shs4.py  simple_hand_potential.py  sp.py  statistics.py  stats.py  straight.py  utils.py  utils_stats.py
potential/: hand_potential.h  multi  multi.cc  test  test.cc
potential_data/: generate_data.py  hand_potential.c  hand_potential.pyx  rank.py  setup.py
potential_data_c/: generate_data.py  hand_potential.c  libpheval.so.0.6.0  lookuptable.c  multi
potential_data_c/evaluator/: CMakeLists.txt
scripts/: build.sh  init_instance.sh
strategies/: Decision Making.md  README.md  Strategy.py  changing_styles.py
strats/: README.md  Strategy.py  aggressor.py  chen.py  cooperative.py  defective.py  generous_tit_for_tat.py  grim.py  hand_equity.py  hand_potential.c  hand_potential.py  hand_potential.pyx  math_utils.py  ph_score.py  random.py  rank.py  simplified_hand_potential.py  submissive.py  test_utils.py  tit_for_tat.py  utils.py
testing/: compare_test.py  system_checks.py  test.py  test_draft.py  test_game.py  test_player.py  utils_test.py
tests/: compare_test.py  test_game.py  test_player.py  test_showdown.py
truncnorm/: test.py
(+10920 files in other folders)
